# StringArtGenerator

./: .gitmodules  Modelfile  README.md  build-wasm.sh  main.py  requirements.txt  run_olama.sh  spec.md  string_art_path.txt  string_art_progress_lines.txt  string_art_progress_lines_lines.txt  test-wasm-memory.js
.github/workflows/: build.yml
StringArtRustImpl/: Cargo.toml  path.txt  string_art_path.txt  string_art_progress_lines.txt
StringArtRustImpl/src/: abstract_generator.rs  error.rs  greedy_generator.rs  image_processing.rs  lib.rs  main.rs  utils.rs  wasm.rs
StringArtRustImpl/src/factories/: generator_factory.rs  mod.rs
StringArtRustImpl/src/generators/: greedy.rs
StringArtRustImpl/src/masking/: eye_enhancement.rs  mod.rs  negative_space.rs
StringArtRustImpl/src/post_processing/: length.rs  mod.rs
StringArtRustImpl/src/rendering/: image_renderer.rs
StringArtRustImpl/src/state/: app_state.rs  config.rs  mod.rs
StringArtRustImpl/src/state/cache/: basic_line_pixel_cache.rs  mod.rs
StringArtRustImpl/src/traits/: generator.rs  line_pixel_cache.rs  mask.rs  mod.rs  renderer.rs
StringArtRustImpl/tests/: length_test.rs  lib_test.rs
memory_bank/: current_task.md  index.md  spec.md
src/: abstract_generator.py  contour_generator.py  create_outline_image.py  greedy_generator.py  negative_greedy_generator.py
string-art-demo/: package-lock.json  package.json  vite.config.ts
string-art-demo/public/: package.json  string_art_rust_impl.d.ts  string_art_rust_impl_bg.wasm.d.ts
string-art-demo/src/: App.css  App.tsx  index.css  main.tsx  useStringArt.ts
string-art-demo/src/components/: ImageUploader.tsx  StringArtCanvas.tsx
string-art-demo/src/hooks/: useStringArt.ts
string-art-demo/src/interfaces/: stringArtConfig.ts
string-art-demo/src/wasm/: string_art_rust_impl.d.ts  string_art_rust_impl.js  string_art_rust_impl_bg.wasm  string_art_rust_impl_bg.wasm.d.ts
string-art-demo/src/workers/: stringArtWorker.ts
string-art-model/: main.json  main.scad  main.stl
string-art-model/constants/: fabricFeeder.scad  motorMount.scad  nailBoard.scad  units.scad
string-art-model/models/: fabricFeeder.scad  motorMount.scad  nailBoard.scad
string-art-website/: i18next-scanner.config.cjs  index.html  package-lock.json  package.json  vite.config.ts
string-art-website/src/: App.css  App.tsx  i18n.tsx  index.css  main.tsx  theme.ts
string-art-website/src/wasm/: string_art_rust_impl.d.ts  (+3 more)
(+31 files in other folders)
