[package]
name = "string_art_rust_impl"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Rust implementation of greedy algorithm for automated string art generation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "string_art"
path = "src/main.rs"

[dependencies]
image = "0.24"
ndarray = "0.15"
indicatif = "0.17"
rayon = { version = "1.7", optional = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opencv = { version = "0.91", default-features = false, features = ["imgproc", "objdetect"], optional = true }
num-traits = "0.2"
clap = { version = "4.4", features = ["derive"] }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
default = []
opencv-support = ["opencv"]
wasm = [
  "wasm-bindgen",
  "wasm-bindgen-futures", 
  "js-sys",
  "web-sys",
  "console_error_panic_hook",
  "wee_alloc",
  "serde-wasm-bindgen",
  "rayon"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
